--- a/Utils/src/build.xml
+++ b/Utils/src/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="Applets" basedir=".">
+<project name="Resources" basedir=".">
   
   <target name="CountdownClock" description="Create executable jar">
 	       
